--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,6 +146,10 @@ body {
     height: 700px;
     padding: 20px;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .infor-home-developer {
@@ -404,7 +408,7 @@ span {
     color: var(--text-color-primary);
 }
 hr {
-    width: 1400px;
+   width: 90%;;
     border: 1px solid #55555552;
     margin: 10px 0;
 }
