--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -426,7 +426,7 @@ span {
     align-items: center;
     flex-wrap: wrap;
     width: 80%;
-    min-height: 450px;
+    min-height: 250px;
 }
 .container-tecnologias {
     
@@ -658,13 +658,21 @@ button:hover {
 }
 /*rodapé*/
 footer {
-    height: 80px;
-    background-color: var(--color-success);
+    min-height: 80px;
+    background-color: #d5d4d4;
     color: var(--bg-color-primary);
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     font-weight: bold;
+}
+footer ul li {
+    text-align: center;
+    padding: 5px;
+    list-style-type: none;
+    font-family: var(--font-secundary);
+    font-weight: normal;
 }
 /*Botao voltar, fixo*/
 #voltar {
