--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -25,6 +25,10 @@
         width: 100%;
         height: 100%;
     }
+    .images-contents-tec {
+        width: 32px;
+        height: 32px;
+    }
     #projetos h1{
         font-size: 1.4em;
     }
@@ -46,5 +50,8 @@
     }
     form{
         width: 80%;
+    }
+    footer ul li,p{
+        font-size: 0.8em;
     }
 }
